# leafbound

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  postCreate.sh  starship.toml
src/: __init__.py  assets.py  builder.py  cli.py  config.py  extract.py  fetch.py
tests/: conftest.py  convert_all.sh  test_assets.py  test_builder.py  test_extract.py  test_fetch.py  test_integration.py  urls.txt
